fetch email from firebase & maps become main activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,7 @@
             android:layout_height="match_parent"
             android:id="@+id/fragment_container"/>
 
+
     </LinearLayout>
 
     <com.google.android.material.navigation.NavigationView
@@ -39,6 +40,9 @@
         app:headerLayout="@layout/nav_header"
         app:menu="@menu/nav_menu"
         app:itemIconTint="@color/yellow"
-        app:itemTextColor="@color/black"/>
+        app:itemTextColor="@color/black">
+
+
+    </com.google.android.material.navigation.NavigationView>
 
 </androidx.drawerlayout.widget.DrawerLayout>
