--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar" >
+    <style name="AppTheme_Dark" parent="Theme.MaterialComponents.DayNight.DarkActionBar" >
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/purple_200</item>
         <item name="windowActionBar">false</item>
