--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -7,12 +7,66 @@
     tools:context=".AboutFragment">
 
     <!-- TODO: Update blank fragment layout -->
+
     <TextView
+        android:layout_width="150dp"
+        android:layout_height="66dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="259dp"
+        android:layout_marginBottom="625dp"
+        android:paddingHorizontal="10dp"
+        android:paddingVertical="10dp"
+        android:text="About us"
+        android:textColor="@color/yellow"
+        android:textSize="25sp" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="114dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="80dp"
+        android:layout_marginBottom="537dp"
+        android:paddingHorizontal="15dp"
+        android:paddingVertical="10dp"
+        android:text="This application was created by group 8 Desain Proyek Teknik Komputer, and can be found at :"
+        android:textColor="@color/black"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/git_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="About Us Fragment"
-        android:textSize="30sp"
-        android:layout_centerInParent="true"
-        android:textColor="@color/yellow"/>
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="200dp"
+        android:layout_marginEnd="147dp"
+        android:layout_marginBottom="477dp"
+        android:clickable="true"
+        android:onClick="onClick"
+        android:paddingHorizontal="15dp"
+        android:paddingVertical="10dp"
+        android:text="Github"
+        android:textColor="@color/yellow"
+        android:textSize="25sp" />
+
+    <ImageButton
+        android:id="@+id/git_btn"
+        android:layout_width="121dp"
+        android:layout_height="104dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="179dp"
+        android:layout_marginEnd="263dp"
+        android:layout_marginBottom="448dp"
+        android:adjustViewBounds="true"
+        android:contentDescription="git_btn"
+        android:scaleType="fitCenter"
+        android:src="@drawable/git_btn" />
 
 </RelativeLayout>
